--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
+  "version": "0.0.0",
   "npmClient": "yarn",
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0"
+  "useWorkspaces": true
 }
