--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
     "packages/*"
   ],
   "scripts": {
-    "bootstrap": "lerna bootstrap"
+    "bootstrap": "lerna bootstrap",
+    "lint": "eslint '**/*.{js,ts,tsx}'"
   },
   "devDependencies": {
-    "lerna": "^3.22.0"
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "lerna": "^3.22.0",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5"
   }
 }
