--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "lint": "eslint '**/*.{js,ts,tsx}'"
+    "lint": "eslint '**/*.{js,ts,tsx}'",
+    "lint:css": "stylelint '**/*.scss'"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.0.2",
@@ -19,6 +20,11 @@
     "eslint-plugin-react": "^7.20.0",
     "lerna": "^3.22.0",
     "prettier": "^2.0.5",
+    "stylelint": "^13.6.0",
+    "stylelint-config-recess-order": "^2.0.4",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.17.2",
     "typescript": "^3.9.5"
   }
 }
