--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "lint": "eslint '**/*.{js,ts,tsx}'",
-    "lint:css": "stylelint '**/*.scss'"
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint:css": "stylelint \"**/*.scss\""
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.0.2",
@@ -18,7 +18,9 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
+    "husky": "^4.2.5",
     "lerna": "^3.22.0",
+    "lint-staged": "^10.2.9",
     "prettier": "^2.0.5",
     "stylelint": "^13.6.0",
     "stylelint-config-recess-order": "^2.0.4",
