chore: TypeORM configuration, with migrations

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,9 @@
   ],
 
   "rules": {
-    "import/extensions": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "import/extensions": "off",
+    "import/prefer-default-export": "off",
+    "class-methods-use-this": "off"
   }
 }
