--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,15 +31,27 @@
   "main": "dist/server.js",
   "types": "src/server.ts",
   "scripts": {
-    "start": "ts-node-dev \"src/server.ts\""
+    "start": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules \"src/server.ts\"",
+    "migrate:new": "yarn run typeorm migration:create",
+    "migrate:new:dev": "yarn run migrate:new --connection development",
+    "migrate:gen": "yarn run typeorm migration:generate",
+    "migrate:gen:dev": "yarn run migrate:gen --connection development",
+    "migrate:run": "yarn run typeorm migration:run",
+    "migrate:run:dev": "yarn run migrate:run --connection development",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44"
   },
   "dependencies": {
+    "@ecoleta/core": "^0.1.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^4.2.0",
+    "typeorm": "^0.2.25"
   }
 }
