chore: Test configuration with typeORM support

--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "class-methods-use-this": "off"
   }
 }
