--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -38,11 +38,18 @@
     "migrate:gen:dev": "yarn run migrate:gen --connection development",
     "migrate:run": "yarn run typeorm migration:run",
     "migrate:run:dev": "yarn run migrate:run --connection development",
+    "test": "cross-env NODE_ENV=test jest",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.3",
+    "@types/supertest": "^2.0.9",
+    "cross-env": "^7.0.2",
+    "jest": "^26.0.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44"
   },
