--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -39,10 +39,12 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
     "@types/supertest": "^2.0.9",
+    "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "jest": "^26.0.1",
     "supertest": "^4.0.2",
