feat(api): Collection points creation

--- a/.eslintrc
+++ b/.eslintrc
@@ -50,5 +50,14 @@
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "class-methods-use-this": "off"
-  }
+  },
+
+  "overrides": [
+    {
+      "files": ["*.spec.ts"],
+      "rules": {
+        "no-unused-expressions": "off"
+      }
+    }
+  ]
 }
