--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,10 +31,11 @@
   "main": "dist/server.js",
   "types": "src/server.ts",
   "scripts": {
-    "start": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules \"src/server.ts\"",
+    "build": "tsc",
     "migrate:new": "yarn run typeorm migration:create -c development",
     "migrate:gen": "yarn run typeorm migration:generate -c development",
     "migrate:run": "yarn run typeorm migration:run -c development",
+    "start": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules \"src/server.ts\"",
     "test": "cross-env NODE_ENV=test jest",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
@@ -42,10 +43,13 @@
     "@types/chai": "^4.2.11",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.3",
+    "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.9",
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
+    "faker": "^4.1.0",
     "jest": "^26.0.1",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.0",
@@ -56,6 +60,7 @@
     "@ecoleta/core": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.2.0",
     "typeorm": "^0.2.25"
