--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -44,6 +44,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/faker": "^4.1.12",
+    "@types/hapi__joi": "^17.1.2",
     "@types/jest": "^25.2.3",
     "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.9",
@@ -58,6 +59,7 @@
   },
   "dependencies": {
     "@ecoleta/core": "^0.1.0",
+    "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
