--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "build": "lerna run build",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "lint:css": "stylelint \"**/*.scss\"",
+    "migrate": "lerna run migrate:run --stream",
+    "start:api": "lerna run start --scope @ecoleta/api --stream",
     "test": "lerna run test"
   },
   "devDependencies": {
