--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "lint:css": "stylelint \"**/*.scss\"",
+    "lint:css": "stylelint \"**/*.{scss,css,ts,tsx,js}\"",
     "migrate": "lerna run migrate:run --stream",
     "start:api": "lerna run start --scope @ecoleta/api --stream",
     "start:web": "lerna run start --scope @ecoleta/web --stream",
