--- a/packages/web/.eslintrc
+++ b/packages/web/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "../../.eslintrc",
   "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
     "react/prop-types": "off"
   }
 }
