--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,10 +22,15 @@
     ]
   },
   "dependencies": {
+    "@ecoleta/core": "^0.1.0",
     "@emotion/core": "^10.0.28",
+    "axios": "^0.19.2",
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-icons": "^3.10.0",
+    "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "theme-ui": "^0.3.1"
@@ -34,6 +39,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-leaflet": "^2.5.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/theme-ui": "^0.3.4",
     "node-sass": "^4.14.1",
