--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -33,7 +33,8 @@
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.3.1",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
@@ -42,6 +43,7 @@
     "@types/react-leaflet": "^2.5.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/theme-ui": "^0.3.4",
+    "@types/yup": "^0.29.3",
     "node-sass": "^4.14.1",
     "typescript": "~3.7.2"
   }
