fix: Eslint and stylelint fixes

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -14,5 +14,10 @@
     "scss/at-rule-no-unknown": true
   },
 
-  "ignoreFiles": "**/node_modules/**"
+  "ignoreFiles": [
+    "**/node_modules/**",
+    "**/build/**",
+    "**/dist/**",
+    "**/coverage/**"
+  ]
 }
