--- a/.eslintrc
+++ b/.eslintrc
@@ -46,6 +46,7 @@
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-unused-vars": ["warn", {"args": "all", "argsIgnorePattern": "^_"}],
     "import/extensions": "off",
     "import/prefer-default-export": "off",
