--- a/.stylelintrc
+++ b/.stylelintrc
@@ -11,7 +11,8 @@
 
   "rules": {
     "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true
+    "scss/at-rule-no-unknown": true,
+    "selector-type-no-unknown": null
   },
 
   "ignoreFiles": [
